--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import SubscribeForm from "../components/SubscribeForm";
   </head>
   <body class="grid place-items-center min-h-screen">
     <div class="grid gap-4">
-      <h1 class="text-2xl font-bold">Subscribe to my blog</h1>
+      <h1 class="text-2xl font-bold">Subscribe to Platta</h1>
       <SubscribeForm client:visible />
     </div>
   </body>
